--- a/Cargo.toml
+++ b/Cargo.toml
@@ -345,3 +345,9 @@ partner-chains-demo-runtime = { path = "demo/runtime" }
 # Schnorr experiments
 schnorr_jubjub = { path = "toolkit/utils/schnorr_jubjub", default-features = false }
 hash256-std-hasher = { version = "0.15.2", default-features = false }
+ark-ed-on-bls12-381 = { version = "0.5.0", default-features = false }
+ark-ff = { version = "0.5.0", default-features = false }
+ark-ec = { version = "0.5.0", default-features = false }
+ark-serialize = { version = "0.5.0", default-features = false }
+rand_core = {version = "0.6.4", default-features = false }
+sha2 = {version = "0.10.9", default-features = false }
