--- a/demo/runtime/Cargo.toml
+++ b/demo/runtime/Cargo.toml
@@ -99,12 +99,7 @@ sp-block-producer-fees = { workspace = true }
 pallet-block-producer-fees = { workspace = true }
 
 sp-io = { workspace = true }
-schnorr_jubjub = { workspace = true }
-midnight-circuits = { git = "https://github.com/midnightntwrk/midnight-circuits", branch = "iquerejeta/committee_proof"}
-halo2curves = { version = "0.7.0", features = ["derive_serde"] }
-blstrs = { git = "https://github.com/davidnevadoc/blstrs", rev = "3dfe5bf" }
-group = "0.13"
-ff = "0.13"
+#schnorr_jubjub = { workspace = true }
 
 [dev-dependencies]
 sp-keyring = { workspace = true }
@@ -187,6 +182,7 @@ std = [
 	"sp-block-participation/std",
 	"pallet-governed-map/std",
 	"sp-governed-map/std",
+#	"schnorr_jubjub/std",
 ]
 
 runtime-benchmarks = [
