--- a/toolkit/utils/schnorr_jubjub/Cargo.toml
+++ b/toolkit/utils/schnorr_jubjub/Cargo.toml
@@ -7,18 +7,13 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
-midnight-circuits = { git = "https://github.com/midnightntwrk/midnight-circuits", branch = "iquerejeta/committee_proof"}
-halo2curves = { version = "0.7.0", features = ["derive_serde"] }
-blstrs = { git = "https://github.com/davidnevadoc/blstrs", rev = "3dfe5bf" }
-group = "0.13"
-ff = "0.13"
 frame-support = { workspace = true }
 pallet-beefy-mmr = { workspace = true }
 parity-scale-codec = { workspace = true }
-rand_core = "0.6.4"
+rand_core = { workspace = true }
 scale-info = {workspace = true}
 sc-keystore = { workspace = true }
-sp-core = { workspace = true }
+sp-core = { workspace = true, features = ["serde"] }
 sp-application-crypto = { workspace = true }
 sp-consensus-beefy = { workspace = true }
 sp-runtime = { workspace = true }
@@ -26,11 +21,49 @@ sp-runtime-interface = { workspace = true }
 sp-io = { workspace = true }
 sp-keystore = { workspace = true }
 sp-externalities = { workspace = true }
-sha2 = "0.10.9"
+sha2 = { workspace = true }
 serde = {workspace = true }
 hex = {workspace = true }
 hash256-std-hasher = { workspace = true }
 sp-trie = { workspace = true }
+rand = { version = "0.8.5", default-features = false }
+rand_chacha = { version = "0.3.1", default-features = false }
+#rand = { workspace = true }
+#rand_chacha = { workspace = true }
+ark-ed-on-bls12-381 = { workspace = true }
+ark-ff = { workspace = true }
+ark-ec = { workspace = true }
+ark-serialize = { workspace = true }
+
+
+[features]
+default = ["std"]
+std = [
+    "ark-ed-on-bls12-381/std",
+    "ark-ff/std",
+    "ark-ec/std",
+    "ark-serialize/std",
+    "frame-support/std",
+    "pallet-beefy-mmr/std",
+    "parity-scale-codec/std",
+    "rand_core/std",
+    "scale-info/std",
+    "sp-core/std",
+    "sp-application-crypto/std",
+    "sp-consensus-beefy/std",
+    "sp-runtime/std",
+    "sp-runtime-interface/std",
+    "sp-io/std",
+    "sp-keystore/std",
+    "sp-externalities/std",
+    "sha2/std",
+    "serde/std",
+    "hex/std",
+    "hash256-std-hasher/std",
+    "sp-trie/std",
+    "rand/std",
+    "rand_chacha/std",
+]
 
 [lints]
 workspace = true
