Add license to schnorr_jubjub

--- a/toolkit/utils/schnorr_jubjub/Cargo.toml
+++ b/toolkit/utils/schnorr_jubjub/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "schnorr_jubjub"
+license = "Apache-2.0"
+description = "Implementation of schnorr over JubJub using poseidon."
 authors.workspace = true
 edition.workspace = true
 homepage.workspace = true
