--- a/toolkit/block-producer-metadata/pallet/Cargo.toml
+++ b/toolkit/block-producer-metadata/pallet/Cargo.toml
@@ -32,6 +32,7 @@ sp-runtime = { workspace = true }
 hex-literal = { workspace = true }
 k256 = { workspace = true }
 pallet-balances = { workspace = true }
+pretty_assertions = { workspace = true }
 
 [features]
 default = ["std"]
