check valid_before

--- a/toolkit/block-producer-metadata/pallet/Cargo.toml
+++ b/toolkit/block-producer-metadata/pallet/Cargo.toml
@@ -19,6 +19,7 @@ parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
 sidechain-domain = { workspace = true }
 sp-std = { workspace = true }
+sidechain-slots = { workspace = true }
 hex-literal = { workspace = true, optional = true }
 sp-core = { workspace = true, optional = true }
 sp-block-producer-metadata = { workspace = true }
@@ -48,6 +49,7 @@ std = [
     "sp-core?/std",
     "sp-block-producer-metadata/std",
     "pallet-balances/std",
+    "sidechain-slots/std"
 ]
 runtime-benchmarks = [
     "frame-benchmarking/runtime-benchmarks",
