Fix building docker image (#879)

--- a/dev/docker/Dockerfile
+++ b/dev/docker/Dockerfile
@@ -1,15 +1,10 @@
 FROM partner-chains-node-builder:latest AS builder
+FROM partner-chains-node-runner:latest
 
-FROM docker.io/library/ubuntu:20.04
-COPY --from=builder /partner-chains-node/docker-build/target/release/partner-chains-demo-node /usr/local/bin/partner-chains-node
+COPY --from=builder /partner-chains-node/partner-chains-demo-node /usr/local/bin/partner-chains-node
 
-RUN useradd -m -u 1000 -U -s /bin/sh -d /substrate substrate && \
-	mkdir -p /data /substrate/.local/share/partner-chains-node && \
-	chown -R substrate:substrate /data && \
-	ln -s /data /substrate/.local/share/partner-chains-node && \
-	# Sanity checks
-	ldd /usr/local/bin/partner-chains-node && \
-	/usr/local/bin/partner-chains-node --version
+RUN /usr/local/bin/partner-chains-node --version
+RUN chown substrate:substrate /usr/local/bin/partner-chains-node && chmod +x /usr/local/bin/partner-chains-node
 
 USER substrate
 
