add subxt 0.42.1 create to project

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -257,6 +257,11 @@ substrate-prometheus-endpoint = { package = "substrate-prometheus-endpoint", git
 substrate-test-runtime-client = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-5" }
 substrate-wasm-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-5" }
 
+# Add subxt dependencies - compatible with polkadot-stable2503-5
+subxt = { version = "0.42.1", default-features = false }
+subxt-signer = { version = "0.42.1", default-features = false }
+subxt-metadata = { version = "0.42.1", default-features = false }
+
 raw-scripts = { git = "https://github.com/input-output-hk/partner-chains-smart-contracts.git", tag = "v7.2.2" }
 # local dependencies
 
