refactor: use types in CreateChainSpecConfig

--- a/toolkit/partner-chains-cli/Cargo.toml
+++ b/toolkit/partner-chains-cli/Cargo.toml
@@ -44,3 +44,7 @@ pallet-session-validator-management = { workspace = true, features = ["std"] }
 [dev-dependencies]
 pretty_assertions = { workspace = true }
 hex-literal = { workspace = true }
+
+[features]
+default = ["std"]
+std = []
