--- a/toolkit/smart-contracts/plutus-data/Cargo.toml
+++ b/toolkit/smart-contracts/plutus-data/Cargo.toml
@@ -14,6 +14,7 @@ workspace = true
 [dependencies]
 log = { workspace = true }
 sidechain-domain = { workspace = true, features = ["std"] }
+sp-core = { workspace = true }
 
 cardano-serialization-lib = { workspace = true }
 thiserror = { workspace = true }
